API doc update and rank endpoint
